--- a/Dashboard/admin/html/students.html
+++ b/Dashboard/admin/html/students.html
@@ -112,49 +112,27 @@
                   Add Student
                 </button>
               </div>
-              <div class="row mt-5">
-                <div class="col-sm-3">
-                  <div class="mb-3">
-                    <label for="defaultSelect" class="form-label">Country</label>
-                    <select id="defaultSelect" class="form-select form-select-sm">
-                      <option>Nigeria</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
+              <div class="row">
+                <div class="col-sm-3 mb-3">
+                    <label for="emailLarge" class="form-label">Country</label>
+                    <select name="" class="form-select form-value" id="">
+                      <option value="Nigeria">Nigeria</option>
+                      <option value="Niger">Niger</option>
                     </select>
                   </div>
+                <div class="col-sm-3 mb-3">
+                    <label for="emailLarge" class="form-label">State</label>
+                    <select name="" class="form-select form-value statesSelect" id="">
+                      <option value="Kano">Kano</option>
+                      <option value="Kaduna">Kaduna</option>
+                    </select>
                 </div>
-                <div class="col-sm-3">
-                  <div class="mb-3">
-                    <label for="defaultSelect" class="form-label">State</label>
-                    <select id="defaultSelect" class="form-select form-select-sm">
-                      <option>Kano</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="mb-3">
-                    <label for="defaultSelect" class="form-label">L.G.A</label>
-                    <select id="defaultSelect" class="form-select form-select-sm">
-                      <option>Nassarawa</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="mb-3">
-                    <label for="defaultSelect" class="form-label">Centers</label>
-                    <select id="defaultSelect" class="form-select form-select-sm">
-                      <option>Kano Center 1</option>
-                      <option value="1">Dambare Center</option>
-                      <option value="2">Gamba Center</option>
-                    </select>
-                  </div>
+                <div class="col-sm-3 mb-3">
+                  <label for="emailLarge" class="form-label">L.G.A</label>
+                  <select name="" class="form-select form-value lgaSelect" id="">
+                    <option value="Nassarawa">Nassarawa</option>
+                    <option value="">Albasu</option>
+                  </select>
                 </div>
               </div>
               <div class="table-responsive mt-5">
