--- a/Dashboard/admin/html/center.html
+++ b/Dashboard/admin/html/center.html
@@ -76,7 +76,7 @@
       <div class="layout-page">
         <!-- Navbar -->
 
-       <nav
+        <nav
           class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme theNavBar"
           id="layout-navbar">
 
@@ -102,18 +102,18 @@
               </div>
               <div class="row">
                 <div class="col-sm-3 mb-3">
-                    <label for="emailLarge" class="form-label">Country</label>
-                    <select name="" class="form-select form-value" id="">
-                      <option value="Nigeria">Nigeria</option>
-                      <option value="Niger">Niger</option>
-                    </select>
-                  </div>
+                  <label for="emailLarge" class="form-label">Country</label>
+                  <select name="" class="form-select form-value" id="">
+                    <option value="Nigeria">Nigeria</option>
+                    <option value="Niger">Niger</option>
+                  </select>
+                </div>
                 <div class="col-sm-3 mb-3">
-                    <label for="emailLarge" class="form-label">State</label>
-                    <select name="" class="form-select form-value statesSelect" id="">
-                      <option value="Kano">Kano</option>
-                      <option value="Kaduna">Kaduna</option>
-                    </select>
+                  <label for="emailLarge" class="form-label">State</label>
+                  <select name="" class="form-select form-value statesSelect" id="">
+                    <option value="Kano">Kano</option>
+                    <option value="Kaduna">Kaduna</option>
+                  </select>
                 </div>
                 <div class="col-sm-3 mb-3">
                   <label for="emailLarge" class="form-label">L.G.A</label>
@@ -122,62 +122,71 @@
                     <option value="">Albasu</option>
                   </select>
                 </div>
+                <div class="col-sm-3 mb-3">
+                <label for="emailLarge" class="form-label">Center</label>
+                <select class='form-select form-value1' id="send-worth13">
+                  <option>Kano Center 1s</option>
+                  <option>Kano Center 2</option>
+                  <option>Kano Center 3</option>
+                  <option>Kano Center 4</option>
+                </select>
               </div>
-              <div class="table-responsive mt-5">
-                <table class="table table-striped centersTable">
-                  <thead>
-                    <th>Name</th>
-                    <th>Country</th>
-                    <th>State</th>
-                    <th>L.G.A</th>
-                    <th>No. Of Students</th>
-                    <th>No. Of <br> Active Students</th>
-                    <th>Admin</th>
-                    <th>Details</th>
-                  </thead>
-                  <tbody id="send-with">
-                    <tr>
-                      <td>Kano center 1</td>
-                      <td>Nigeria</td>
-                      <td>Kano</td>
-                      <td>Nassarawa</td>
-                      <td>200</td>
-                      <td>120</td>
-                      <td>Umar galdima</td>
-                      <td>
-                        <a href="centerDetails.html" class="btn btn-sm btn-outline-primary">
-                          <span class="tf-icons bx bx-bullseye"></span>&nbsp; View
-                        </a>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+            </div>
+            <div class="table-responsive mt-5">
+              <table class="table table-striped centersTable">
+                <thead>
+                  <th>Name</th>
+                  <th>Country</th>
+                  <th>State</th>
+                  <th>L.G.A</th>
+                  <th>No. Of Students</th>
+                  <th>No. Of <br> Active Students</th>
+                  <th>Admin</th>
+                  <th>Details</th>
+                </thead>
+                <tbody id="send-with">
+                  <tr>
+                    <td>Kano center 1</td>
+                    <td>Nigeria</td>
+                    <td>Kano</td>
+                    <td>Nassarawa</td>
+                    <td>200</td>
+                    <td>120</td>
+                    <td>Umar galdima</td>
+                    <td>
+                      <a href="centerDetails.html" class="btn btn-sm btn-outline-primary">
+                        <span class="tf-icons bx bx-bullseye"></span>&nbsp; View
+                      </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
-        <!-- / Content -->
-
-        <!-- Footer -->
-        <footer class="content-footer footer bg-footer-theme">
-          <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
-            <div class="mb-2 mb-md-0">
-              ©
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              Allon Fasaha
-            </div>
-
-          </div>
-        </footer>
-        <!-- / Footer -->
-
-        <div class="content-backdrop fade"></div>
       </div>
-      <!-- Content wrapper -->
+      <!-- / Content -->
+
+      <!-- Footer -->
+      <footer class="content-footer footer bg-footer-theme">
+        <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
+          <div class="mb-2 mb-md-0">
+            ©
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            Allon Fasaha
+          </div>
+
+        </div>
+      </footer>
+      <!-- / Footer -->
+
+      <div class="content-backdrop fade"></div>
     </div>
-    <!-- / Layout page -->
+    <!-- Content wrapper -->
+  </div>
+  <!-- / Layout page -->
   </div>
 
   <!-- Overlay -->
