--- a/Dashboard/admin/html/index.html
+++ b/Dashboard/admin/html/index.html
@@ -16,6 +16,7 @@
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
@@ -175,7 +176,7 @@
 
               <div class="col-md-6">
                 <div class="card card-body">
-                  <div id="map"></div>
+                  <div id="map" style="width: 100%; height: 500px;"></div>
                 </div>
               </div>
             </div>
@@ -185,40 +186,27 @@
                 <div class="card">
                   <div class="card-body">
                     <div class="row">
-                      <div class="col-sm-3">
-                        <div class="mb-3">
-                          <label for="defaultSelect" class="form-label">Country</label>
-                          <select id="defaultSelect" class="form-select form-select-sm">
-                            <option>Nigeria</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                          </select>
-                        </div>
+                      <div class="col-sm-3 mb-3">
+                        <label for="emailLarge" class="form-label">Country</label>
+                        <select name="" class="form-select form-value" id="">
+                          <option value="Nigeria">Nigeria</option>
+                          <option value="Niger">Niger</option>
+                        </select>
                       </div>
-                      <div class="col-sm-3">
-                        <div class="mb-3">
-                          <label for="defaultSelect" class="form-label">State</label>
-                          <select id="defaultSelect" class="form-select form-select-sm">
-                            <option>Kano</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                          </select>
-                        </div>
+                      <div class="col-sm-3 mb-3">
+                        <label for="emailLarge" class="form-label">State</label>
+                        <select name="" class="form-select form-value statesSelect" id="">
+                          <option value="Kano">Kano</option>
+                          <option value="Kaduna">Kaduna</option>
+                        </select>
                       </div>
-                      <div class="col-sm-3">
-                        <div class="mb-3">
-                          <label for="defaultSelect" class="form-label">L.G.A</label>
-                          <select id="defaultSelect" class="form-select form-select-sm">
-                            <option>Nassarawa</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                          </select>
-                        </div>
+                      <div class="col-sm-3 mb-3">
+                        <label for="emailLarge" class="form-label">L.G.A</label>
+                        <select name="" class="form-select form-value lgaSelect" id="">
+                          <option value="Nassarawa">Nassarawa</option>
+                          <option value="">Albasu</option>
+                        </select>
                       </div>
-
                       <div class="col-sm-3">
                         <div class="form-check mt-3">
                           <input name="default-radio-1" class="form-check-input" type="radio" value="" id="lowest"
@@ -355,38 +343,26 @@
                 <div class="card card-body">
                   <div class="card-heading fw-bold mb-4">User Activity</div>
                   <div class="row">
-                    <div class="col-sm-4">
-                      <div class="mb-3">
-                        <label for="defaultSelect" class="form-label">Country</label>
-                        <select id="defaultSelect" class="form-select form-select-sm">
-                          <option>Nigeria</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
-                      </div>
+                    <div class="col-sm-3 mb-3">
+                      <label for="emailLarge" class="form-label">Country</label>
+                      <select name="" class="form-select form-value" id="">
+                        <option value="Nigeria">Nigeria</option>
+                        <option value="Niger">Niger</option>
+                      </select>
                     </div>
-                    <div class="col-sm-4">
-                      <div class="mb-3">
-                        <label for="defaultSelect" class="form-label">State</label>
-                        <select id="defaultSelect" class="form-select form-select-sm">
-                          <option>Kano</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
-                      </div>
+                    <div class="col-sm-3 mb-3">
+                      <label for="emailLarge" class="form-label">State</label>
+                      <select name="" class="form-select form-value statesSelect" id="">
+                        <option value="Kano">Kano</option>
+                        <option value="Kaduna">Kaduna</option>
+                      </select>
                     </div>
-                    <div class="col-sm-4">
-                      <div class="mb-3">
-                        <label for="defaultSelect" class="form-label">L.G.A</label>
-                        <select id="defaultSelect" class="form-select form-select-sm">
-                          <option>Nassarawa</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
-                      </div>
+                    <div class="col-sm-3 mb-3">
+                      <label for="emailLarge" class="form-label">L.G.A</label>
+                      <select name="" class="form-select form-value lgaSelect" id="">
+                        <option value="Nassarawa">Nassarawa</option>
+                        <option value="">Albasu</option>
+                      </select>
                     </div>
                   </div>
 
@@ -447,16 +423,17 @@
     <script src="../assets/vendor/libs/jquery/jquery.js"></script>
     <script src="../assets/vendor/libs/popper/popper.js"></script>
     <script src="../assets/vendor/js/bootstrap.js"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
     <script src="../assets/vendor/libs/sweetalert/sweetalert2.all.min.js"></script>
     <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="../assets/vendor/libs/chartjs/dist/chart.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATC8UCwvz3SYDDxvDGU_h7LME5W3KXGDE&callback=initMap&v=weekly" defer></script>
     <script src="../assets/vendor/libs/echarts/echarts.js"></script>
     <script src="../assets/js/lgas.js"></script>
     <script src="../assets/vendor/js/menu.js"></script>
     <script src="../assets/vendor/js/webcam.js"></script>
     <!-- endbuild -->
     <script src="../assets/js/index.js"></script>
+    <script src="../assets/js/centre.js"></script>
     <script src="../assets/js/dashboardG.js"></script>
     <!-- Vendors JS -->
 
